package com.hive.yupeiyuan;

public class Role {
    public Long id;
    public Long hiveId;
    public String name;
    public long permissions;
}
